Fix an on 'Error Index' page, where status icon was cut off
As Leo mentioned,
the right part of this icon is cut off
when the status is 'New Accepted'.
So make the column wider, to prevent this.

--- a/assets/css/amp-validation-error-taxonomy.css
+++ b/assets/css/amp-validation-error-taxonomy.css
@@ -18,7 +18,7 @@ th.column-error_type {
 }
 
 th.column-status {
-	width: 10%;
+	width: 15%;
 }
 
 .fixed th.column-posts {
